# machine_learning_engineering_interview_detached

./: .gcloudignore  .gitattributes  .gitignore  .gitleaks.toml  .pip-audit-allowlist.toml  .pre-commit-config.yaml  .tool-versions  1.ARCHITECTURE.md  1.README.md  2.ARCHITECTURE.md  2.QPS.md  3.MCP.md  3.QPS.md  4.API.md  4.MCP.md  5.API.md  5.FRONTEND.md  6.DATABASE.md  6.FRONTEND.md  7.DATABASE.md  Brewfile  README.md  buf.gen.yaml  justfile  locustfile.py  pyproject.toml  rust-toolchain.toml  skaffold.gke.yaml  skaffold.yaml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/actions/setup-python/: action.yml
.github/scripts/: check-pr-body.sh
.github/workflows/: bootstrap.yml  ci.yml  seed-catalog.yml
apps/api/: pyproject.toml
apps/api/src/avsa_api/: main.py
apps/api/src/avsa_api/clients/: orchestrator.py
apps/api/src/avsa_api/middleware/: rate_limit.py
apps/api/src/avsa_api/proto/: __init__.py  avsa_pb2.py  avsa_pb2_grpc.py
apps/api/src/avsa_api/routes/: catalog.py  chat.py  health.py  images.py
apps/api/src/avsa_api/static/: __init__.py  placeholder.py
apps/api/tests/: conftest.py  test_catalog_route.py  test_chat_conversation_id.py  test_chat_guards.py  test_chat_resume.py  test_chat_sse.py  test_chat_text_only.py  test_health.py  test_images_route.py  test_integration.py  test_orchestrator_client.py  test_rate_limit.py  test_service_error_handling.py  test_service_readiness.py  test_storage_root_anchor.py
apps/api/tests/fixtures/: create_fixtures.py
apps/model/: pyproject.toml
apps/model/src/avsa_model/: __init__.py  device.py  embed.py  embed_text.py  heads.py  health.py  main.py  stub.py  text_encoder.py  text_stub.py  vit.py
apps/model/tests/: conftest.py  test_attribute_accuracy_gate.py  test_device.py  test_embed.py  test_embed_attributes.py  test_embed_text.py  test_health.py  test_text_encoder.py  test_vit_optimisation.py
apps/orchestrator/: .formatter.exs  mix.exs
apps/orchestrator/config/: config.exs  dev.exs  runtime.exs  test.exs
config/: avsa.base.toml  avsa.local.env.example  avsa.local.toml  avsa.prod.toml
crates/batcher/: Cargo.toml
crates/batcher/src/: batch_queue.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  vit_client.rs
crates/batcher/src/routes/: embed.rs  health.rs  mod.rs
crates/batcher/tests/: embed_attributes_test.rs  embed_test.rs  health_test.rs  vit_client_contract_test.rs
crates/batcher/tests/common/: mod.rs
data/attribute_heads/e8bcf7394f30b59124167d70b14a7283e28aa614e40e567284c0a8295c2db2de/: category.npz  (+4 more)
data/fashion200k/: LICENSE  README.md  ids.txt  image_urls.txt  metadata.jsonl
dockerfiles/: Dockerfile.api  Dockerfile.batcher  Dockerfile.loadtest  Dockerfile.model  Dockerfile.orchestrator  Dockerfile.serve  Dockerfile.shopper
evals/: __init__.py
evals/attributes/: accuracy_gate.py
evals/qps/: __init__.py
evals/retrieval/: recall.py  run_recall_at_k.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
helm/: Chart.yaml  values.gke.yaml  values.local.yaml  values.prod.yaml  values.yaml
helm/dashboards/: baseline.json  detail.json
helm/templates/: api.yaml  batcher-config.yaml  batcher.yaml  grafana-dashboard.yaml  ingress.yaml  loadtest.yaml  model.yaml  orchestrator.yaml  serve.yaml  servicemonitor-api.yaml  servicemonitor-batcher.yaml  servicemonitor-model.yaml  servicemonitor-orchestrator.yaml  shopper.yaml
infra/grafana/: operations.json
infra/helm/: monitoring-values.yaml
infra/local-db/: docker-compose.yml
infra/local-observability/: README.md  alerts.yml  docker-compose.yml  prometheus.yml  toxiproxy.json
infra/migrations/: 001_catalog_schema.sql  002_conversations_schema.sql  004_rename_price_column.sql  005_add_text_embedding.sql  006_drop_audit_schema.sql  migrate.sh
infra/scripts/: seed_text_embeddings.py
infra/terraform/: README.md
libs/avsa-core/: pyproject.toml
libs/avsa-core/src/avsa_core/: __init__.py  config.py
libs/avsa-core/src/avsa_core/storage/: __init__.py  errors.py  local.py
libs/avsa-core/tests/: test_config_overlay.py  test_storage_errors.py  test_storage_factory.py  test_storage_local.py
libs/avsa-data/: pyproject.toml
libs/avsa-data/src/avsa_data/: __init__.py  acquisition.py  attribute_heads.py  catalog_fashion200k.py  embedding_pipeline.py  fashion200k_metadata.py
libs/avsa-data/tests/: test_acquire_cli_uses_metadata_file.py  test_acquisition_manifest.py  test_attribute_heads.py  test_catalog_fashion200k.py  test_embedding_pipeline.py  test_fashion200k_checksums.py  test_fashion200k_metadata.py  test_precompute_cli.py
machine_learning_engineering_interview/: api.py  catalog_seed.py  loadtest.py  model.py  serve.py
modal_deploy/: api_app.py  batcher_app.py  model_app.py
scripts/: README-acquire-fashion200k.md  README-precompute-embeddings.md  README-train-attribute-heads.md  acquire-fashion200k.py  bench-prod.sh  bench-qps.py  bootstrap-gcp-env.sh  build-fashion200k-checksums.py  check-doc-drift.sh  config-gen.py  demo_mcp_session.py  deploy-prod.sh  draft-pr-body.sh  emit-deploy-event.sh  pip-audit.sh  precompute-embeddings.py  prepare-fashion200k-metadata.py  seed-catalog.py  smoke-prod.sh  train-attribute-heads.py
specs/: README.md
specs/api/: chat.openapi.yaml
specs/db/: catalog.sql  conversations.sql
specs/mcp/: tools.json
specs/orchestrator/: avsa.proto  buf.yaml
specs/verifier/: injection_corpus.txt  safety_probes.txt
tests/: test_api.py  test_bench_prod_config.py  test_bench_qps_target.py  test_bootstrap.py  test_catalog_seed.py  test_demo_mcp_session.py  test_loadtest.py  test_metrics.py  test_model.py  test_spec_sql.py  test_specs.py  test_workload.py
tests/e2e/: conftest.py  test_e2e_journey.py
tests/fixtures/: catalog.py
tests/integration/: conftest.py  test_051_text_embedding_seeder.py  test_catalog_fixture.py  test_db_setup.py  test_fashion200k_seed.py  test_recall_at_5_eval.py  test_schema_constraints.py  test_similarity_search.py
tests/security/: test_ray_dashboard_not_exposed.py
tests/smoke/: prod.sh  staging.sh
(+205 files in other folders)
