[project]
name = "avsa-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # avsa-core: shared foundation (config loader + storage abstraction),
    # consumed as an editable workspace-local path dep (see [tool.uv.sources]).
    "avsa-core",
    "fastapi>=0.120,<0.130",
    "starlette>=0.52.1",
    "uvicorn[standard]>=0.27,<0.35",
    "httpx>=0.27,<0.30",
    "pydantic>=2.6,<3.0",
    "asyncpg>=0.29,<1.0",
    "grpcio>=1.60,<2.0",
    "protobuf>=5.0,<7.0",
    "python-multipart>=0.0.9,<1.0",
    "prometheus-fastapi-instrumentator>=7.0",
    # psycopg: synchronous Postgres driver used by deploy-prod.sh Phase 4
    # catalog seed (machine_learning_engineering_interview.catalog_seed.copy_rows)
    # which runs inside the api pod via `kubectl exec`.
    "psycopg[binary]>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "asgi-lifespan>=2.1,<3.0",
    # grpcio-tools: used for generating Python stubs from proto files.
    "grpcio-tools>=1.60,<2.0",
    # locust: load-test runner for the bench-quick recipe and perf-gate CI job.
    "locust>=2.28,<3.0",
]

[tool.uv.sources]
avsa-core = { path = "../../libs/avsa-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avsa_api"]

[tool.ruff]
line-length = 100
src = ["src"]
# Exclude generated protobuf stubs — ruff cannot be applied to machine-generated code.
exclude = ["src/avsa_api/proto"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's File() is a dependency marker used as an argument default (like the
# built-in-allowlisted Form/Query) — not a mutable default. Allowlist it so B008
# doesn't flag `image: list[UploadFile] = File(default=[])`.
extend-immutable-calls = ["fastapi.File"]

[tool.ruff.lint.per-file-ignores]
# Test functions legitimately mirror the camel/upper-case identifier under
# test (e.g. test_get_object_raises_NotFound_on_missing names the domain
# exception). PEP 8's all-lowercase guidance does not serve readability here.
"tests/**" = ["N802"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]
exclude = ["src/avsa_api/proto"]

[[tool.mypy.overrides]]
module = ["grpc.*", "google.protobuf.*", "google.protobuf.internal.*", "avsa_api.proto.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live orchestrator (deselect with -m 'not integration')",
    "e2e: full-stack tests; run with AVSA_E2E=1 against a running stack (just stack-up)",
]
