[package]
name = "avsa-batcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "avsa-batcher"
path = "src/main.rs"

[dependencies]
# Spec requires axum 1.x; axum 1.0 is not yet released (latest stable = 0.8.x).
# Using 0.8 — the pre-1.0 stable series. Update when 1.0 ships.
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
# OTel bridge: tracing macros → OTel SDK. tracing-opentelemetry 0.28 targets OTel 0.27.
tracing-opentelemetry = "0.28"
# Typed error enums — required by rust-agent persona; anyhow is banned in lib code.
thiserror = "1"
# async-trait: makes VitService object-safe on stable Rust (async fn in traits).
async-trait = "0.1"
# base64 v0.22 uses Engine trait; STANDARD alphabet for image bytes.
base64 = "0.22"
# toml: parse config/avsa.toml [batcher] section at startup.
toml = "0.8"
# reqwest: needed in production code by VitClient (moved from dev-deps).
reqwest = { version = "0.12", features = ["json"] }
# Prometheus metrics exposition.
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
# tracing-test: captures tracing output in tests; no-env-filter ignores RUST_LOG
# so span assertions are reliable regardless of environment.
tracing-test = { version = "0.2", features = ["no-env-filter"] }
