[project]
name = "avsa-core"
version = "0.1.0"
description = "AVSA shared foundation: config loader + storage abstraction (no third-party runtime deps)."
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avsa_core"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Test functions legitimately mirror the camel/upper-case identifier under test
# (e.g. test_get_object_raises_NotFound_on_missing names the domain exception).
"tests/**" = ["N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
